@@ -2,6 +2,9 @@ Post-v2.5.0
 ---------------------
    - ovsdb-server:
      * New "monitor2" and "update2" extensions to RFC 7047.
+   - OpenFlow:
+     * OpenFlow 1.1+ OFPT_QUEUE_GET_CONFIG_REQUEST now supports OFPP_ANY.
+
 
 v2.5.0 - xx xxx xxxx
 ---------------------
